--- a/packages/client/styles/globals/main.scss
+++ b/packages/client/styles/globals/main.scss
@@ -1,12 +1,18 @@
 @use "./normalize";
+@use "./tokens";
 
 body {
 	margin: 0;
 	font-weight: 400;
 	line-height: 1.65;
 	font-size: 1rem;
+	color: var(--dark400);
+	background: var(--bg);
 	word-wrap: break-word;
 	font-kerning: normal;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+		"Segoe UI Symbol";
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-moz-font-feature-settings: "kern", "liga", "clig", "calt";
