--- a/packages/client/components/header/Header.module.scss
+++ b/packages/client/components/header/Header.module.scss
@@ -15,4 +15,15 @@
 		width: 80%;
 		max-width: 600px;
 	}
+	&_cartbtn {
+		margin-left: auto;
+		background: var(--blue200);
+		padding: 12px 16px;
+		border-radius: 10px;
+		font-weight: 600;
+		transition: box-shadow 0.3s;
+		&:hover {
+			box-shadow: 0 0 0 2px var(--blue200);
+		}
+	}
 }
