--- a/packages/client/components/input/Input.module.scss
+++ b/packages/client/components/input/Input.module.scss
@@ -4,8 +4,10 @@
 	box-shadow: 0 0 0px 1px var(--blue200);
 	padding: 12px 16px;
 	border-radius: 10px;
+	transition: box-shadow 0.3s;
 	&:focus,
-	&:focus-visible {
+	&:focus-visible,
+	&:hover {
 		outline: 0;
 		box-shadow: 0 0 0px 2px var(--blue200);
 	}
