client: setup tests and add cart store

--- a/packages/client/styles/globals/main.scss
+++ b/packages/client/styles/globals/main.scss
@@ -1,6 +1,6 @@
-@use "./normalize";
-@use "./tokens";
-
+@use "normalize";
+@use "tokens";
+@use "utilities";
 body {
 	margin: 0;
 	font-weight: 400;
