--- a/packages/client/components/cart/CartItem.module.scss
+++ b/packages/client/components/cart/CartItem.module.scss
@@ -1,2 +1,54 @@
 .cartitem {
+	max-width: 600px;
+	display: flex;
+	&_image {
+		border-radius: var(--border-rd);
+	}
+	&_details {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+		flex: 1;
+		&_cat {
+			opacity: 0.8;
+			font-weight: 500;
+		}
+		&_title {
+			font-size: 1.2rem;
+			font-weight: 600;
+		}
+		&_price {
+			margin-top: auto;
+			font-weight: 500;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			width: 80%;
+			font-size: 1.125rem;
+		}
+	}
+	.cost_label,
+	.quant_label {
+		opacity: 0.8;
+		margin-right: 12px;
+	}
+	.quant {
+		background: var(--blue100);
+		display: inline-flex;
+		border-radius: 5px;
+		text-align: center;
+		align-items: center;
+		.btn___action {
+			opacity: 0.6;
+			transition: opacity 0.3s;
+			.icon {
+				width: 16px;
+				height: 16px;
+				vertical-align: middle;
+			}
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
 }
