--- a/packages/client/components/product-card/ProductCard.module.scss
+++ b/packages/client/components/product-card/ProductCard.module.scss
@@ -6,6 +6,7 @@
 	border-radius: var(--border-rd);
 	box-shadow: 0 0 14px 0px #f9f7f7;
 	transition: box-shadow 0.3s;
+	overflow: hidden;
 	&:hover {
 		box-shadow: 0 0 14px 0px #dbebf5;
 	}
@@ -41,5 +42,33 @@
 	}
 	&_title {
 		font-weight: 600;
+	}
+	&_meta {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	&_btn___add {
+		background: var(--grn100);
+		display: flex;
+		align-items: center;
+		color: var(--grn900);
+		font-weight: 500;
+		font-size: 0.875rem;
+		transform: translateX(30px);
+		width: 85px;
+		border-radius: 6px 0 0 6px;
+		padding: 5px 8px;
+		transition: opacity 0.3s, transform 0.4s;
+		.icon {
+			width: 20px;
+			height: 20px;
+			margin-right: 5px;
+			transition: transform 0.5s;
+		}
+		&:hover {
+			transform: translateX(20px);
+			opacity: 0.9;
+		}
 	}
 }
