feat:client style cart page

--- a/packages/client/styles/globals/_palette.scss
+++ b/packages/client/styles/globals/_palette.scss
@@ -1,9 +1,11 @@
 @mixin default() {
 	--bg: #f9f9f9;
 	--dark400: #393964;
+	--dark100: #dadbef;
 	--blue100: #f1fbff;
 	--blue200: #c8caff;
 	--yllw100: #ffe6c1;
 	--grn900: #04441a;
+	--grn500: #35d86d;
 	--grn100: #bcf9d1;
 }
