--- a/packages/client/components/input/Input.module.scss
+++ b/packages/client/components/input/Input.module.scss
@@ -4,6 +4,18 @@
 	padding: 12px 16px;
 	border-radius: 10px;
 	transition: box-shadow 0.3s;
+	box-shadow: 0 0 0 1px var(--dark100);
+	&_wrap {
+		margin: 16px 0;
+	}
+	&_label {
+		font-size: 0.875rem;
+		transform: translateY(-4px);
+		position: relative;
+		display: block;
+		font-weight: 500;
+		opacity: 0.8;
+	}
 	&:focus,
 	&:focus-visible,
 	&:hover {
