--- a/packages/client/styles/globals/_utilities.scss
+++ b/packages/client/styles/globals/_utilities.scss
@@ -5,3 +5,12 @@
 	box-shadow: 0 0 14px 0px #f9f7f7;
 	transition: box-shadow 0.3s;
 }
+
+.pageContainer {
+	min-height: calc(100vh - var(--header-ht));
+	padding: var(--container-pd);
+	max-width: var(--container-wd);
+	margin: 0 auto;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
