--- a/packages/client/components/grid/Grid.module.scss
+++ b/packages/client/components/grid/Grid.module.scss
@@ -6,4 +6,14 @@
 	justify-items: center;
 	grid-column-gap: 32px;
 	grid-row-gap: 32px;
+	@media screen and (max-width: 1200px) {
+		grid-template-columns: repeat(4, 1fr);
+		grid-column-gap: 24px;
+	}
+	@media screen and (max-width: 940px) {
+		grid-template-columns: repeat(3, 1fr);
+	}
+	@media screen and (max-width: 680px) {
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
