--- a/packages/client/components/order-form/OrderForm.module.scss
+++ b/packages/client/components/order-form/OrderForm.module.scss
@@ -20,7 +20,7 @@
 		font-weight: 600;
 		font-size: 1.2rem;
 		margin-top: auto;
-		&_btn_icon {
+		&_icon {
 			width: 24px;
 			vertical-align: middle;
 		}
