--- a/packages/client/components/grid/Grid.module.scss
+++ b/packages/client/components/grid/Grid.module.scss
@@ -16,4 +16,8 @@
 	@media screen and (max-width: 680px) {
 		grid-template-columns: repeat(2, 1fr);
 	}
+	&_placeholder {
+		position: absolute;
+		opacity: 0.6;
+	}
 }
