--- a/packages/client/components/nav-btn/NavBtn.module.scss
+++ b/packages/client/components/nav-btn/NavBtn.module.scss
@@ -1,7 +1,7 @@
 .navbtn {
 	margin-left: auto;
 	position: relative;
-	background: var(--blue200);
+	background: var(--yllw100);
 	padding: 12px 16px;
 	border-radius: 10px;
 	font-weight: 600;
