--- a/packages/client/components/nav-btn/NavBtn.module.scss
+++ b/packages/client/components/nav-btn/NavBtn.module.scss
@@ -5,8 +5,16 @@
 	padding: 12px 16px;
 	border-radius: 10px;
 	font-weight: 600;
-	transition: box-shadow 0.3s;
+	transition: box-shadow 0.3s, color 0.3s;
 	&:hover {
 		box-shadow: 0 0 0 2px var(--blue200);
+	}
+	&.ghost {
+		background: transparent;
+		padding: 0;
+		&:hover {
+			color: var(--blue200);
+			box-shadow: none;
+		}
 	}
 }
